# gpuhash

./: CMakeLists.txt  LICENSE  README.md
include/: hash_functions.h  mt19937ar.h
src/: mt19937ar.cpp
